# udot_wrangler

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  api.html  contributors.md  development.html  how_to.html  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  workflow.html
.github/workflows/: mkdocs-deploy.yml
.notebook/: 01-make-network-wrangler-files-from-cube.ipynb  02-make-project-cards-from-cube-logs.ipynb  03-apply-project-cards-and-create-build-network.ipynb  README.md
css/: extra.css
docs/: api.md  how_to.md  index.md  workflow.md
notebook/: 01-make-network-wrangler-files-from-cube.ipynb  02-make-project-cards-from-cube-logs.ipynb  03-apply-project-cards-and-create-build-network.ipynb
search/: search_index.json
settings/: log_to_net.csv
udot_wrangler/: __init__.py  parameters.py
