[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["udot_wrangler"]

[tool.setuptools.package-data]
udot_wrangler = ["settings/*"]

[project]
name = "udot-wrangler"
version = "0.1.3"
description = "Network Wrangler parameters for UDOT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sijia Wang", email = "sijia.wang@wsp.com"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "cube-wrangler",
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
]
doc = [
    "black",
    "json5",
    "jsonschema",
    "Markdown",
    "markdown-it-py",
    "mike",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-table-reader-plugin",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
