[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "udot-wrangler"
version = "0.1.2"
description = "Network Wrangler parameters for UDOT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cube-wrangler",
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
]
doc = [
    "black",
    "json5",
    "jsonschema",
    "Markdown",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-material-extensions",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true